--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -14,17 +14,17 @@ text-align: center;
 .track {
   width: 100%;
 }
-.cyclist{
-  transform: scaleX(-1);
-  width: 1%;
-  height: 10px;
+
+.cyclist {
+  width: 100px;
+  height: 100px;
   font-size: 30px;
 }
 
 
 
 /* ====== buttons */
-.button{ 
+.button {
   border:0;
   background-attachment: 0;
 }
@@ -65,7 +65,6 @@ i{
 
 .white i:nth-of-type(2) {
   animation: upper 5s linear infinite;
-  
 }
 .red i:nth-of-type(2) {
   animation: lower 10s linear infinite;
