--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -1,3 +1,7 @@
+:root{
+  --heart-beat: 238, 136, 119;
+}
+
 .home{
   display: flex;
   flex-wrap: wrap;
@@ -26,9 +30,53 @@ text-align: center;
 /* ====== buttons */
 .button{ 
   border:0;
-  background-attachment: 0;
+  background: 0;
+  color:white;
+
 }
-.add-cyclist{}
+.add-cyclist{
+
+font-family: 'Montserrat', sans-serif;
+// font-family: 'Lobster', cursive;
+font-size: 30px;
+font-weight: 200;
+
+
+}
+
+
+
+.track{
+
+  .rider01{
+    background:red ;
+    // path{
+    //   stroke:rgba(red, 1);
+    // } 
+  }
+
+  .rider02{
+    background:green ;
+    // path{
+    //   stroke:rgba(green, 1);
+    // } 
+  }
+
+  .rider03{
+    background:blue ;
+    // path{
+    //   stroke:rgba(blue, 1);
+    // }  
+  }
+    
+  .rider04{
+    background:rebeccapurple ;
+    // path{
+    //   stroke:rgba(rebeccapurple, 1.2);
+    // } 
+  }
+  
+}
 
 
 /* ===================== Header */
@@ -45,8 +93,6 @@ text-align: center;
   color: red;
   display: flex;
   justify-content: center;
-
-
 }
 
 i{
@@ -100,4 +146,100 @@ i{
   19%,22.99%,32%,36.999%,45%,45.999%,50%,50.99%,59%,60.999%,69%,70.999%,86%,95.999% {
     opacity:0.4; text-shadow: none;
   }
+}
+
+
+
+/* ================= Heartbeat loader == */
+
+.power{
+  color:red;
+  font-size: 30px;
+  
+  text-shadow: 0 0 80px red,0 0 30px FireBrick,0 0 6px DarkRed;
+  font-family: 'Monoton', cursive;
+// font-family: 'Roboto', sans-serif;
+// font-family: 'Montserrat', sans-serif;
+// font-family: 'Lobster', cursive;
+}
+@keyframes heartbeat-loader {
+  0% {
+    -moz-transform: rotate(45deg) scale(1);
+    -ms-transform: rotate(45deg) scale(1);
+    -webkit-transform: rotate(45deg) scale(1);
+    transform: rotate(45deg) scale(1);
+  }
+  14% {
+    -moz-transform: rotate(45deg) scale(1.3);
+    -ms-transform: rotate(45deg) scale(1.3);
+    -webkit-transform: rotate(45deg) scale(1.3);
+    transform: rotate(45deg) scale(1.3);
+  }
+  28% {
+    -moz-transform: rotate(45deg) scale(1);
+    -ms-transform: rotate(45deg) scale(1);
+    -webkit-transform: rotate(45deg) scale(1);
+    transform: rotate(45deg) scale(1);
+  }
+  42% {
+    -moz-transform: rotate(45deg) scale(1.3);
+    -ms-transform: rotate(45deg) scale(1.3);
+    -webkit-transform: rotate(45deg) scale(1.3);
+    transform: rotate(45deg) scale(1.3);
+  }
+  70% {
+    -moz-transform: rotate(45deg) scale(1);
+    -ms-transform: rotate(45deg) scale(1);
+    -webkit-transform: rotate(45deg) scale(1);
+    transform: rotate(45deg) scale(1);
+  }
+}
+/* :not(:required) hides this rule from IE9 and below */
+.heartbeat-loader:not(:required) {
+  margin-right:10px;
+
+  animation: heartbeat-loader 3s ease 0s infinite normal;
+  display: inline-block;
+  position: relative;
+  overflow: hidden;
+  text-indent: -9999px;
+  width: 36px;
+  height: 36px;
+  -moz-transform: rotate(45deg) scale(1);
+  -ms-transform: rotate(45deg) scale(1);
+  -webkit-transform: rotate(45deg) scale(1);
+  transform: rotate(45deg) scale(1);
+  -moz-transform-origin: 50% 50%;
+  -ms-transform-origin: 50% 50%;
+  -webkit-transform-origin: 50% 50%;
+  transform-origin: 50% 50%;
+}
+.heartbeat-loader:not(:required):after, .heartbeat-loader:not(:required):before {
+  position: absolute;
+  content: "";
+  background:rgba(red, 1);
+}
+.heartbeat-loader:not(:required):before {
+  -moz-border-radius-topleft: 12px;
+  -webkit-border-top-left-radius: 12px;
+  border-top-left-radius: 12px;
+  -moz-border-radius-bottomleft: 12px;
+  -webkit-border-bottom-left-radius: 12px;
+  border-bottom-left-radius: 12px;
+  top: 12px;
+  left: 0;
+  width: 36px;
+  height: 24px;
+}
+.heartbeat-loader:not(:required):after {
+  -moz-border-radius-topleft: 12px;
+  -webkit-border-top-left-radius: 12px;
+  border-top-left-radius: 12px;
+  -moz-border-radius-topright: 12px;
+  -webkit-border-top-right-radius: 12px;
+  border-top-right-radius: 12px;
+  top: 0;
+  left: 12px;
+  width: 24px;
+  height: 12px;
 }
