--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -18,10 +18,6 @@ width:100%;
 text-align: center;
 }
 
-.track {
-  width: 100%;
-}
-
 .cyclist {
   width: 100px;
   height: 100px;
@@ -69,20 +65,39 @@ text-align: center;
 
 }
 
+.connect{
+  color:#0000ff;
+}
 
 
 .track{
-
+  position: relative;
+  width: 100%;
+  display: flex;
+  > div {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
   .rider--1{
     path{
       stroke:rgba(red, 1);
-    } 
+    }
+
+    .road{
+      bottom:0px;
+    }
   }
 
   .rider--2{
     path{
       stroke:rgba(green, 1);
     } 
+
+    .road{
+      bottom:150px;
+    }
   }
 
   .rider--3{
@@ -94,7 +109,7 @@ text-align: center;
   .rider--4{
     path{
       stroke:rgba(rebeccapurple, 1.2);
-    } 
+    }
   }
   
 }
@@ -102,8 +117,13 @@ text-align: center;
 
 .road{
   border-bottom: 3px dashed rgba(255,255,255,0.3);
-  
+  position: fixed;
+  left:0;
+  right:0;
+  bottom:0;
 }
+
+
 
 
 /* ===================== Header */
@@ -175,20 +195,45 @@ i{
 }
 
 
+.power-graph{
+  position: fixed!important;
+  width: 100% !important;
+  left:0;
+  right:0;
+  bottom:0;
+  svg{
+    width: 100%;
+  }
+}
 
-/* ================= Heartbeat loader == */
-
-.power{
+/* ================= stats == */
+.player-stats{
+  width: 80%;
+  border: 2px solid white;
+  box-shadow: 0 0 10px rgba(#ffffff, 0.3),0 0 3px rgba(#008000, 0.3),0 0 2px rgba(#0000ff, 0.3);
+}
+.power-wrapper{
   color:red;
   font-size: 30px;
   
   text-shadow: 0 0 80px red,0 0 30px FireBrick,0 0 6px DarkRed;
   font-family: 'Monoton', cursive;
-// font-family: 'Roboto', sans-serif;
-// font-family: 'Montserrat', sans-serif;
-// font-family: 'Lobster', cursive;
-}
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 
-.power-icon{
-  max-width: 40px;
+  h2{
+    font-weight: normal;
+    margin: 0 10px 0 0;
+    padding: 0;
+    width: 100%;
+
+  }
+}
+.total-power{
+  width: 50%;
+}
+.current-power{
+  width: 50%;
 }
